Multiply floating panel shadow margin by scale factor on X11

The padding for svg hints on X11 is does not account
for scale factors, so we multiply it on the panel shadows
side.

BUG:496928