shell/panelshadows.cpp
@@ -8,6 +8,7 @@
 #include "panelshadows_p.h"
 
 #include <KWindowShadow>
+#include <KWindowSystem>
 
 class PanelShadows::Private
 {
@@ -240,6 +241,10 @@ void PanelShadows::Private::updateShadow(QWindow *window, KSvg::FrameSvg::Enable
 
     QMargins padding;
     QMargins extraPadding = m_extraPadding.value(window);
+
+    if (KWindowSystem::isPlatformX11()) {
+        extraPadding *= window->devicePixelRatio();
+    }
 
     if (enabledBorders & KSvg::FrameSvg::TopBorder) {
         const QSize marginHint = q->elementSize(QStringLiteral("shadow-hint-top-margin")).toSize();
